# prometheus-engine

./: .gitignore  ANATOMY_FOR_PROGRAMMER.md  API_GUIDE.md  BIOMECHANICS_FOR_PROMETHEUS_ENGINE.md  Cargo.toml  ENGINE_ARCHITECTURE.md  ENGINE_ROADMAP.md  LICENSE  PATENTS_AND_INNOVATIONS.md  PROMETHEUS_2_SPEC.md  README.md  TASK_FOR_AELIS.md  VISION_15_IDEAS.md  build.rs
Examples/: HOW_TO_SEE_HUMAN_BODY.md  VOXEL_TO_BEAUTY_PIPELINE.md
models/: human_default.prom.json
src/: lib.rs  main.rs  mesh_shader.wgsl  shader.wgsl
src/core/: apartment.rs  body.rs  brick.rs  cat.rs  damage.rs  entity.rs  meshing.rs  mod.rs  render_mesh.rs  sdf_body.rs  skeleton.rs  streaming.rs
